@@ -1,3 +1,11 @@
+2004-09-13  Ross Burton  <ross@burtonini.com>
+
+	* src/sj-extracting.c:
+	Disable the genre combo when ripping.
+
+	* src/sj-main.c:
+	Reset the genre combo when the CD is changed.
+
 2004-09-08  Ross Burton  <ross@burtonini.com>
 
 	* src/bacon-cd-selection.c:
